📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7494,5 +7494,21 @@
         "published": "Thu, 11 Dec 2025 03:50:04 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46227422\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/10/baby-delivered-in-waymo-continues-proud-tradition-of-not-making-it-to-the-hospital/",
+        "title": "Baby delivered in Waymo continues proud tradition of not making it to the hospital",
+        "link": "https://techcrunch.com/2025/12/10/baby-delivered-in-waymo-continues-proud-tradition-of-not-making-it-to-the-hospital/",
+        "published": "Thu, 11 Dec 2025 04:46:56 +0000",
+        "source": "TechCrunch",
+        "summary": "Some traditions, it seems, are immune to disruption."
+    },
+    {
+        "id": "https://gizmodo.com/openai-anthropic-others-receive-warning-letter-from-dozens-of-state-attorneys-general-2000698248",
+        "title": "OpenAI, Anthropic, Others Receive Warning Letter from Dozens of State Attorneys General",
+        "link": "https://gizmodo.com/openai-anthropic-others-receive-warning-letter-from-dozens-of-state-attorneys-general-2000698248",
+        "published": "Thu, 11 Dec 2025 04:36:54 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"State Attorney General for New York Letitia James\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/letitia-james.jpg\" width=\"1500\" /><br /><br />They want the companies to \"mitigate the harm caused by sycophantic and delusional outputs\" from AI products."
     }
 ]
