📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7510,5 +7510,37 @@
         "published": "Thu, 11 Dec 2025 04:36:54 +0000",
         "source": "Gizmodo",
         "summary": "<img alt=\"State Attorney General for New York Letitia James\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/letitia-james.jpg\" width=\"1500\" /><br /><br />They want the companies to \"mitigate the harm caused by sycophantic and delusional outputs\" from AI products."
+    },
+    {
+        "id": "https://www.wired.com/story/airdoctor-coupon-code/",
+        "title": "AirDoctor Coupon Codes: 40% Off | December 2025",
+        "link": "https://www.wired.com/story/airdoctor-coupon-code/",
+        "published": "Thu, 11 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Save up to $400 on top air purifiers and filters with verified AirDoctor promo codes and special offers for December 2025."
+    },
+    {
+        "id": "https://www.wired.com/story/oneplus-promo-code/",
+        "title": "OnePlus Promo Code: $70 Off | December 2025",
+        "link": "https://www.wired.com/story/oneplus-promo-code/",
+        "published": "Thu, 11 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save 30% with a OnePlus coupon this month, plus save up to 10% on earbuds, phones, and more."
+    },
+    {
+        "id": "https://www.wired.com/story/lg-promo-code/",
+        "title": "20% Off LG Promo Code & Coupons | December 2025",
+        "link": "https://www.wired.com/story/lg-promo-code/",
+        "published": "Thu, 11 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save 20% with an LG promo code today, plus up to $1,000 off appliances, 40% off bestselling TVs and monitors, and more early Black Friday bundle offers that won\u2019t last long."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-11",
+        "title": "Moon phase today: What the moon will look like on December 11",
+        "link": "https://mashable.com/article/moon-phase-today-dec-11",
+        "published": "Thu, 11 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 11, 2025 as well as when the next full moon is expected."
     }
 ]
