📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7582,5 +7582,29 @@
         "published": "Thu, 11 Dec 2025 07:21:33 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46228597\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/video/kimmel-trump-racist-immigration-speech-somalia",
+        "title": "Worst thing hes ever said: Kimmel slams Trump for racist immigration comments",
+        "link": "https://mashable.com/video/kimmel-trump-racist-immigration-speech-somalia",
+        "published": "Thu, 11 Dec 2025 08:17:05 +0000",
+        "source": "Mashable",
+        "summary": "Jimmy Kimmel called out President Donald Trump's recent comments on immigration as potentially \"the worst thing he's ever said.\""
+    },
+    {
+        "id": "https://www.zdnet.com/article/oura-ring-smoking-overheating-battery/",
+        "title": "Oura users report smoking, overheating Rings - what we know",
+        "link": "https://www.zdnet.com/article/oura-ring-smoking-overheating-battery/",
+        "published": "Thu, 11 Dec 2025 09:07:49 GMT",
+        "source": "Latest news",
+        "summary": "Here's what the smart ring brand is doing about it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/ai-business-leadership-human-values-expert-recommendations/",
+        "title": "The AI leader's new balance: What changes (and what remains) in the age of algorithms",
+        "link": "https://www.zdnet.com/article/ai-business-leadership-human-values-expert-recommendations/",
+        "published": "Thu, 11 Dec 2025 09:00:43 GMT",
+        "source": "Latest news",
+        "summary": "Successful leaders will harness the power of AI while amplifying essential human capabilities. Three experts share essential recommendations that every executive should have on their agenda."
     }
 ]
