📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7606,5 +7606,61 @@
         "published": "Thu, 11 Dec 2025 09:00:43 GMT",
         "source": "Latest news",
         "summary": "Successful leaders will harness the power of AI while amplifying essential human capabilities. Three experts share essential recommendations that every executive should have on their agenda."
+    },
+    {
+        "id": "https://www.theverge.com/news/842243/ayaneo-pocket-play-gaming-phone-android-sony-xperia-play",
+        "title": "Ayaneo\u2019s first Android phone looks like a return of the Xperia Play",
+        "link": "https://www.theverge.com/news/842243/ayaneo-pocket-play-gaming-phone-android-sony-xperia-play",
+        "published": "2025-12-11T04:16:52-05:00",
+        "source": "The Verge",
+        "summary": "Retro gaming handheld manufacturer Ayaneo has finally revealed the design of its first Android phone, which has been teased since August. Fittingly, it too is a throwback - to 2011's Sony Ericcson Xperia Play. The Pocket Play has a screen that slides up to reveal a full set of inset physical controls, including a D-pad, [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/audio/headphones/best-noise-canceling-headphones-130029881.html?src=rss",
+        "title": "The best noise-canceling headphones for 2025",
+        "link": "https://www.engadget.com/audio/headphones/best-noise-canceling-headphones-130029881.html?src=rss",
+        "published": "Thu, 11 Dec 2025 10:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Noise is hard to escape, whether it\u2019s the hum of traffic, the buzz of a busy office or the neighbor\u2019s lawn mower starting up right when you need to focus. That\u2019s where noise-canceling headphones earn their keep. A good pair doesn\u2019t just quiet the world around you, it creates a pocket of calm so you can actually enjoy your music, podcasts or peace and quiet.<br /><br />Modern noise-canceling headphones have come a long way, combining powerful ANC with clearer sound, longer battery life and sma"
+    },
+    {
+        "id": "https://gizmodo.com/uber-reportedly-downplaying-ev-incentives-for-drivers-as-it-prepares-to-miss-emissions-goals-2000698087",
+        "title": "Uber Reportedly Downplaying EV Incentives for Drivers As It Prepares to Miss Emissions Goals",
+        "link": "https://gizmodo.com/uber-reportedly-downplaying-ev-incentives-for-drivers-as-it-prepares-to-miss-emissions-goals-2000698087",
+        "published": "Thu, 11 Dec 2025 10:00:03 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"An image of Uber&#039;s EV charging stations.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Uber-Electric-Vehicles-Scale-Back.jpg\" width=\"1920\" /><br /><br />Trump 2.0 has been hard on EV adoption. Uber is just one more example."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-dji-flip-dronedeal",
+        "title": "The DJI Flip drone is $90 off right now at Amazon \u2014 get it before a potential ban",
+        "link": "https://mashable.com/article/dec-11-dji-flip-dronedeal",
+        "published": "Thu, 11 Dec 2025 09:52:53 +0000",
+        "source": "Mashable",
+        "summary": "Get the best DJI drone deal on Amazon. Save 21% on the DJI Flip (RC-N3) drone at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-anker-solix-deal",
+        "title": "The Anker Solix F2000 Solar Generator just got its biggest-ever discount at Amazon \u2014 save $1,000 right now",
+        "link": "https://mashable.com/article/dec-11-anker-solix-deal",
+        "published": "Thu, 11 Dec 2025 09:49:41 +0000",
+        "source": "Mashable",
+        "summary": "Find the best portable power station deal from Amazon. Save 45% on the Anker Solix F2000 Solar Generator at Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-85-inch-tv/",
+        "title": "The best 85-inch TVs you can buy in 2025: Expert recommended for big-screen entertainment",
+        "link": "https://www.zdnet.com/article/best-85-inch-tv/",
+        "published": "Thu, 11 Dec 2025 10:00:37 GMT",
+        "source": "Latest news",
+        "summary": "Not all big-screen TVs are created equal, so I and other ZDNET experts have found the best 85-inch TVs from brands like Samsung, Sony, and more to help you create the ultimate home theater."
+    },
+    {
+        "id": "https://www.zdnet.com/article/most-popular-smartwatches-from-our-readers/",
+        "title": "Thousands of readers bought this smartwatch in 2025 (it's not a Galaxy, Pixel, or Apple Watch)",
+        "link": "https://www.zdnet.com/article/most-popular-smartwatches-from-our-readers/",
+        "published": "Thu, 11 Dec 2025 09:30:44 GMT",
+        "source": "Latest news",
+        "summary": "We gathered the top 10 smartwatches and fitness trackers that our readers purchased the most this year, and there were several surprises on the list."
     }
 ]
