📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7662,5 +7662,133 @@
         "published": "Thu, 11 Dec 2025 09:30:44 GMT",
         "source": "Latest news",
         "summary": "We gathered the top 10 smartwatches and fitness trackers that our readers purchased the most this year, and there were several surprises on the list."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/port-raises-100m-at-800m-valuation-to-take-on-spotifys-backstage/",
+        "title": "Port raises $100M at $800M valuation to take on Spotify\u2019s Backstage",
+        "link": "https://techcrunch.com/2025/12/11/port-raises-100m-at-800m-valuation-to-take-on-spotifys-backstage/",
+        "published": "Thu, 11 Dec 2025 11:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Port offers a proprietary alternative to Spotify's popular devtool catalog Backstage, but with a valuable addition: it can be used to manage AI agents, too."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/runware-raises-50m-series-a-from-dawn-capital-comcast-ventures-to-become-the-api-for-all-ai/",
+        "title": "Runware raises $50M Series A to help make image, video generation easier for developers",
+        "link": "https://techcrunch.com/2025/12/11/runware-raises-50m-series-a-from-dawn-capital-comcast-ventures-to-become-the-api-for-all-ai/",
+        "published": "Thu, 11 Dec 2025 11:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Runware lets developers integrate realtime image generation in their apps, with an affordable pricing model."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/11/harness-hits-5-5b-valuation-with-240m-to-automate-ais-after-code-gap/",
+        "title": "Harness hits $5.5B valuation with $240M raise to automate AI\u2019s \u2018after-code\u2019 gap",
+        "link": "https://techcrunch.com/2025/12/11/harness-hits-5-5b-valuation-with-240m-to-automate-ais-after-code-gap/",
+        "published": "Thu, 11 Dec 2025 10:30:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Goldman Sachs has led Harness's Series E round, with participation from IVP, Menlo Ventures, and Unusual Ventures."
+    },
+    {
+        "id": "https://www.theverge.com/news/842256/adobe-2025-earnings-ai-growth",
+        "title": "Adobe sees a bright future as AI bet pays off",
+        "link": "https://www.theverge.com/news/842256/adobe-2025-earnings-ai-growth",
+        "published": "2025-12-11T06:06:44-05:00",
+        "source": "The Verge",
+        "summary": "Entrenching generative AI into Adobe's creative software ecosystem is paying off, according to the company's latest earnings. While its share price has fallen by more than 37 percent this year at the time of writing, Adobe is reporting a bump in annual profits driven by record revenue of $23.77 billion for 2025 - an 11 [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/us-could-demand-five-year-social-media-history-from-tourists-before-allowing-entry-102751243.html?src=rss",
+        "title": "US could demand five-year social media history from tourists before allowing entry",
+        "link": "https://www.engadget.com/social-media/us-could-demand-five-year-social-media-history-from-tourists-before-allowing-entry-102751243.html?src=rss",
+        "published": "Thu, 11 Dec 2025 10:27:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Tourists from Europe and other regions could be asked to provide a five-year social media history before given entry to the United States, according to a <a href=\"https://public-inspection.federalregister.gov/2025-22461.pdf\">new proposal</a> from the US Customs and Border Protection service (CBP). The new rule would affect visitors from countries who normally enjoy relatively easy entry to the US via the Electronic System for Travel Authorization (ESTA).</p>\n<p>The new proposal cites an execu"
+    },
+    {
+        "id": "https://gizmodo.com/warhammer-40k-horus-heresy-end-of-ruin-print-on-demand-2000698175",
+        "title": "Games Workshop Has Finally Learned Its Lesson",
+        "link": "https://gizmodo.com/warhammer-40k-horus-heresy-end-of-ruin-print-on-demand-2000698175",
+        "published": "Thu, 11 Dec 2025 11:00:15 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Games Workshop Horus Heresy The Scouring Dorn Calgar\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/games-workshop-horus-heresy-the-scouring-dorn-calgar.jpg\" width=\"1920\" /><br /><br />After months of silence, the 'Warhammer 40,000' creator has decided on a new way to sell its fancy books without them being immediately scalped by resellers."
+    },
+    {
+        "id": "https://gizmodo.com/librarians-arent-hiding-secret-books-from-you-that-only-ai-knows-about-2000698176",
+        "title": "Librarians Aren\u2019t Hiding Secret Books From You That Only AI Knows About",
+        "link": "https://gizmodo.com/librarians-arent-hiding-secret-books-from-you-that-only-ai-knows-about-2000698176",
+        "published": "Thu, 11 Dec 2025 10:30:51 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Library Books\" class=\"attachment-full size-full wp-post-image\" height=\"1282\" src=\"https://gizmodo.com/app/uploads/2025/12/library-books.jpg\" width=\"1920\" /><br /><br />AI chatbots are generating fake titles that people insist are real."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-apple-macbook-air-m4-deal",
+        "title": "The 2025 MacBook Air M4 is still $250 off at Amazon, but theres a catch",
+        "link": "https://mashable.com/article/dec-11-apple-macbook-air-m4-deal",
+        "published": "Thu, 11 Dec 2025 10:24:57 +0000",
+        "source": "Mashable",
+        "summary": "Get the best MacBook Air deal at Amazon. Save 21% on the 13-inch 2025 MacBook Air at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-dji-mic-3-deal",
+        "title": "The DJI Mic 3 is at its lowest-ever price at Amazon \u2014 save $70 right now",
+        "link": "https://mashable.com/article/dec-11-dji-mic-3-deal",
+        "published": "Thu, 11 Dec 2025 10:20:53 +0000",
+        "source": "Mashable",
+        "summary": "Get the best DJI mic deal at Amazon. Save 21% on the DJI Mic 3 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-11-2025",
+        "title": "NYT Mini crossword answers, hints for December 11, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-11-2025",
+        "published": "Thu, 11 Dec 2025 10:20:05 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 11, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/whoosh-screen-cleaner-apple-approved",
+        "title": "This under-$20 screen cleaner is approved by Apple and cleans my shamefully dirty laptop screen",
+        "link": "https://mashable.com/article/whoosh-screen-cleaner-apple-approved",
+        "published": "Thu, 11 Dec 2025 10:15:00 +0000",
+        "source": "Mashable",
+        "summary": "Plagued by dirty, fingerprint-covered touchscreens? The Whoosh screen cleaner is used across all Apple stores, so we tried it for ourselves."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-pokemon-legends-za-unova-poster-collection-deal",
+        "title": "Get the Pok\u00e9mon TCG Unova Poster Collection for under market value when bundled with Pok\u00e9mon Legends: Z-A",
+        "link": "https://mashable.com/article/dec-11-pokemon-legends-za-unova-poster-collection-deal",
+        "published": "Thu, 11 Dec 2025 10:01:39 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec 11, Pok\u00e9mon TCG's Unova Poster Collection is below MSRP when bundled with a copy of 'Pok\u00e9mon Legends: Z-A' for Nintendo Switch at Walmart."
+    },
+    {
+        "id": "https://readwrite.com/former-basketball-student-athlete-violated-sports-betting-rules-ncaa/",
+        "title": "Former basketball student athlete found to have violated sports betting rules, NCAA says",
+        "link": "https://readwrite.com/former-basketball-student-athlete-violated-sports-betting-rules-ncaa/",
+        "published": "Thu, 11 Dec 2025 10:47:27 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"NCAA boots gambling students after they won over $16K betting on themselves. Former basketball student athlete found to have violated sports betting rules, NCAA says. NCAA logo on top of blurred image of basketball game\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/09/NCAA-boots-gambling-students-after-they-won-over-16K-betting-on-themselves-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\""
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-cloud-hosting/",
+        "title": "The best cloud hosting services for 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-cloud-hosting/",
+        "published": "Thu, 11 Dec 2025 11:00:48 GMT",
+        "source": "Latest news",
+        "summary": "We've tested and ranked the best cloud hosting services available to help you choose the right option for your business or side project."
+    },
+    {
+        "id": "https://lwn.net/SubscriberLink/1047238/25c270b077849dc0/",
+        "title": "A \"Frozen\" Dictionary for Python",
+        "link": "https://lwn.net/SubscriberLink/1047238/25c270b077849dc0/",
+        "published": "Thu, 11 Dec 2025 09:51:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46229467\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/11/1129239/solar-geoengineering-startups-are-getting-serious/",
+        "title": "Solar geoengineering startups are getting serious",
+        "link": "https://www.technologyreview.com/2025/12/11/1129239/solar-geoengineering-startups-are-getting-serious/",
+        "published": "Thu, 11 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Solar geoengineering aims to manipulate the climate by bouncing sunlight back into space. In theory, it could ease global warming. But as interest in the idea grows, so do concerns about potential consequences. A startup called Stardust Solutions recently raised a $60 million funding round, the largest known to date for a geoengineering startup. My&#8230;"
     }
 ]
