📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -7790,5 +7790,125 @@
         "published": "Thu, 11 Dec 2025 11:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "Solar geoengineering aims to manipulate the climate by bouncing sunlight back into space. In theory, it could ease global warming. But as interest in the idea grows, so do concerns about potential consequences. A startup called Stardust Solutions recently raised a $60 million funding round, the largest known to date for a geoengineering startup. My&#8230;"
+    },
+    {
+        "id": "https://www.wired.com/story/laptops-have-never-been-cheaper-that-trend-might-reverse-in-2026/",
+        "title": "Laptops Have Never Been Cheaper. That Trend Might Reverse in 2026",
+        "link": "https://www.wired.com/story/laptops-have-never-been-cheaper-that-trend-might-reverse-in-2026/",
+        "published": "Thu, 11 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Despite all the worries about the economy, laptop prices have never been lower. But in 2026, all of that could change."
+    },
+    {
+        "id": "https://gizmodo.com/kamrui-mini-pcs-join-amazons-holiday-clearance-at-record-low-plus-an-extra-discount-code-to-rival-the-mac-mini-2000697648",
+        "title": "Kamrui Mini PCs Join Amazon\u2019s Holiday Clearance at Record Low, Plus an Extra Discount Code to Rival the Mac Mini",
+        "link": "https://gizmodo.com/kamrui-mini-pcs-join-amazons-holiday-clearance-at-record-low-plus-an-extra-discount-code-to-rival-the-mac-mini-2000697648",
+        "published": "Thu, 11 Dec 2025 12:10:03 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Kamrui 2nd\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/Kamrui-2nd.jpg\" width=\"1500\" /><br /><br />Two of KAMRUI's very best mini PCs are worth a (very small) spot on your desk, especially at these new prices."
+    },
+    {
+        "id": "https://gizmodo.com/convicted-crypto-wallet-developer-warns-miners-will-be-next-in-bitcoin-crackdown-2000697969",
+        "title": "Convicted Crypto Wallet Developer Warns Miners Will Be Next in Bitcoin Crackdown",
+        "link": "https://gizmodo.com/convicted-crypto-wallet-developer-warns-miners-will-be-next-in-bitcoin-crackdown-2000697969",
+        "published": "Thu, 11 Dec 2025 12:05:58 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Photo of four bitcoin mining rigs in a row.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/bitcoin_miner.jpg\" width=\"1920\" /><br /><br />Many in the crypto world have been pleased with Trump's friendly treatment. Others still think the government is out to get them."
+    },
+    {
+        "id": "https://gizmodo.com/hugh-jackman-wolverine-return-avengers-2000698127",
+        "title": "Hugh Jackman Says \u2018It Doesn\u2019t Feel Like the End\u2019 for Wolverine",
+        "link": "https://gizmodo.com/hugh-jackman-wolverine-return-avengers-2000698127",
+        "published": "Thu, 11 Dec 2025 12:00:23 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Hugh Jackman Wolverine\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Hugh-Jackman-Wolverine.jpg\" width=\"1920\" /><br /><br />He was last seen in 'Deadpool & Wolverine,' but could Jackman return in 'Avengers: Doomsday' or 'Secret Wars'?"
+    },
+    {
+        "id": "https://gizmodo.com/webb-traces-distant-explosion-to-oldest-supernova-ever-observed-2000698037",
+        "title": "Webb Traces Distant Explosion to Oldest Supernova Ever Observed",
+        "link": "https://gizmodo.com/webb-traces-distant-explosion-to-oldest-supernova-ever-observed-2000698037",
+        "published": "Thu, 11 Dec 2025 11:30:38 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Supernova Grb 250314a (artist&#039;s Concept)\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/webb-supernova.jpg\" width=\"1920\" /><br /><br />The ancient stellar death took place when the universe was a mere 730 million years old."
+    },
+    {
+        "id": "https://mashable.com/article/free-ben-and-jerrys-ice-cream-bars",
+        "title": "Ben & Jerrys is launching Ice Cream Bars \u2014 how to get free Cookie Dough bars this month",
+        "link": "https://mashable.com/article/free-ben-and-jerrys-ice-cream-bars",
+        "published": "Thu, 11 Dec 2025 11:54:50 +0000",
+        "source": "Mashable",
+        "summary": "Ben & Jerry's is launching Ice Cream Bars. More than 150 Scoop Shops are handing out free Cookie Dough bars on Dec. 17."
+    },
+    {
+        "id": "https://mashable.com/article/dec-11-pokemon-tcg-mega-kangaskhan-ex-box-deal",
+        "title": "Pok\u00e9mon TCGs Mega Kangaskhan ex Box is $15 cheaper at Walmart vs. Amazon",
+        "link": "https://mashable.com/article/dec-11-pokemon-tcg-mega-kangaskhan-ex-box-deal",
+        "published": "Thu, 11 Dec 2025 11:35:53 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 11, Mega Kangaskhan ex Box is MSRP at Walmart, $15 cheaper than Amazon."
+    },
+    {
+        "id": "https://mashable.com/video/lily-allen-west-end-girl-play-fallon",
+        "title": "Lily Allen teasing West End Girl as a play is almost too much",
+        "link": "https://mashable.com/video/lily-allen-west-end-girl-play-fallon",
+        "published": "Thu, 11 Dec 2025 11:21:07 +0000",
+        "source": "Mashable",
+        "summary": "Lily Allen told Jimmy Fallon she's \"having some conversations\" about turning her album \"West End Girl\" into a West End play."
+    },
+    {
+        "id": "https://mashable.com/video/taylor-swift-stephen-colbert",
+        "title": "Taylor Swift talks to Stephen Colbert about The Late Show and the end of an era",
+        "link": "https://mashable.com/video/taylor-swift-stephen-colbert",
+        "published": "Thu, 11 Dec 2025 10:59:52 +0000",
+        "source": "Mashable",
+        "summary": "Taylor Swift spoke to Stephen Colbert about how to deal with the end of an era on \"The Late Show.\""
+    },
+    {
+        "id": "https://mashable.com/video/taylor-swift-stephen-colbert-mystery-novel",
+        "title": "Taylor Swifts mystery novel idea for Stephen Colbert post-Late Show is wild",
+        "link": "https://mashable.com/video/taylor-swift-stephen-colbert-mystery-novel",
+        "published": "Thu, 11 Dec 2025 10:49:05 +0000",
+        "source": "Mashable",
+        "summary": "Taylor Swift joined Stephen Colbert on \"The Late Show\" and they planned a mystery novel?"
+    },
+    {
+        "id": "https://readwrite.com/kalshi-crypto-coalition-us-prediction-markets/",
+        "title": "Industry giants form coalition to defend and standardize US prediction markets",
+        "link": "https://readwrite.com/kalshi-crypto-coalition-us-prediction-markets/",
+        "published": "Thu, 11 Dec 2025 12:06:25 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Industry giants form coalition to defend and standardize US prediction markets. The Coalition for Prediction Markets\u201d in bold black text on a yellow background, with the word \u201cFOR\u201d and several rectangular blocks highlighted in black.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Industry-giants-form-coalition-to-defend-and-standardize-US-prediction-markets-300x200.png\" style=\"width: 100%; height: 66.67%; mar"
+    },
+    {
+        "id": "https://readwrite.com/tennessee-sports-wagering-council-hits-two-illegal-sportsbooks-with-fines/",
+        "title": "Tennessee Sports Wagering Council hits two \u2018illegal sportsbooks\u2019 with fines",
+        "link": "https://readwrite.com/tennessee-sports-wagering-council-hits-two-illegal-sportsbooks-with-fines/",
+        "published": "Thu, 11 Dec 2025 11:45:14 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A photograph of the Tennessee state flag displayed as a backdrop with a document that says &#039;Fines&#039; in the front. Tennessee Sports Wagering Council hits two &#039;illegal sportsbook&#039; with fines\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Tennessee-Sports-Wagering-Council-hits-two-illegal-sportsbook-with-fines-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /"
+    },
+    {
+        "id": "https://readwrite.com/matchbook-prediction-market-launch-uk/",
+        "title": "Matchbook: prediction market is launching in UK as \u2018road test\u2019 before US",
+        "link": "https://readwrite.com/matchbook-prediction-market-launch-uk/",
+        "published": "Thu, 11 Dec 2025 11:27:50 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"White background with Matchbook logo in the middle (red circle, with M in the middle in white). Matchbook: prediction market is launching in UK as &#039;road test&#039; before US\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/ATS-15-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A prediction market will soon be entering the UK as sports betting exchange Matchboo"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-malware-removal-software/",
+        "title": "The best malware removal software of 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-malware-removal-software/",
+        "published": "Thu, 11 Dec 2025 11:30:40 GMT",
+        "source": "Latest news",
+        "summary": "If you need to eradicate malware from your device, check out our favorite, tried-and-tested solutions that can easily deal with spyware, Trojans, and more."
+    },
+    {
+        "id": "https://www.newyorker.com/news/fault-lines/if-you-quit-social-media-will-you-read-more-books",
+        "title": "If You Quit Social Media, Will You Read More Books?",
+        "link": "https://www.newyorker.com/news/fault-lines/if-you-quit-social-media-will-you-read-more-books",
+        "published": "Thu, 11 Dec 2025 10:38:51 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46229766\">Comments</a>"
     }
 ]
